# markstore

./: LICENSE  README.md  markstore.py  pyproject.toml  temp.py
.github/workflows/: dist.yaml
tests/: test_basic.py  test_empty.py  test_mixing.py  utils.py
tests/data/: basic.md  complex_dict.md  complex_dict1.md  complex_dict2.md  complex_list.md  complicated.md  dict_in_list.md  empty_key.md  empty_layers.md  empty_layers2.md  empty_list.md  empty_values.md  layers1.md  list_in_dict.md  negative_numbers.md  string_newlines.md  strings_with_pound.md  trivial_dict.md  trivial_string.md
